--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://kalvink.github.io
-baseurl: /mayoptical2/
+url: https://mayoptical.github.io
+baseurl: /mayoptical/
 
 # Site settings
 title: May Optical
