--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://mayoptical.github.io
-baseurl: /mayoptical/
+url: https://mayoptical.com
+baseurl: 
 
 # Site settings
 title: May Optical
